[project]
name = "tuya-pip"
version = "0.1.0"
description = "CLI wrapper for pip with security validation via python-package-firewall"
authors = [
    {name = "Estiben Licona", email = "estiben@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "httpx>=0.27.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
]

[project.scripts]
tuya-pip = "tuya_pip.cli:app"

[project.urls]
Homepage = "https://github.com/estibenlicona/tuya-pip"
Repository = "https://github.com/estibenlicona/tuya-pip"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
